# giotto-llm

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml  sphinx-gh-pages.yml
docs/source/: conf.py  index.rst
docs/source/_templates/: module.rst
examples/: 001-clean-data.ipynb  002-vllm-inference.ipynb  003-vllm-with-merged.ipynb  004-tokenizer-exper.ipynb  005-validation.ipynb  006-plot_resource_usage.ipynb  notebooks_utils.py
giotto_llm/: data.py  wrapper.py
giotto_llm/bucket/: __main__.py  serialize.py
giotto_llm/causal_lm/: models.py
giotto_llm/finetuning/: __main__.py  prune.py
giotto_llm/multimodal/: molmo.py  qwen.py
giotto_llm/prompts/: consts.py
giotto_llm/tests/: test.parquet  test_data.py  test_structured_image.py  test_version.py
kaggle/input/: arc-agi_full_solutions.json
mlops/docker/: Dockerfile  setup-docker-build-prerequisites.sh
mlops/finetune-text/: MLProject
mlops/jobs-queue/: README.md  go.mod
mlops/jobs-queue/cmd/client/: main.go  request.go
mlops/jobs-queue/cmd/db/: main.go
mlops/jobs-queue/cmd/server/: db.go  handlers.go  main.go  timestamp.go
mlops/jobs-queue/internal/types/: types.go
mlops/mlflow/: README.md  pyproject.toml
tools/: create-mamba-env.sh  install-mamba-deps.sh  script_gsutil.py
