[tool.poetry]
name = "llm_tracking"
version = "0.1.0"
description = "ML ops server."
readme = "README.md"
authors = ["Gabriele Beltramo <g.beltramo@giotto.ai>"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "1.26.4"
polars = "1.9.0"
mlflow = "2.16.2"
google-cloud-storage = "1.44.0"


[tool.poetry.group.dev.dependencies]
build = "^1.2.2"
black = "^24.8.0"
pytest = "^8.3.2"
isort = "^5.13.2"
mypy = "^1.11.1"
twine = "^5.1.0"
bumpver = "^2023.1129"